# langchain-vectara

./: .gitignore  README.md
.github/scripts/: check_diff.py
.github/workflows/: _release.yml
libs/vectara/: .gitignore  Makefile  README.md  pyproject.toml
libs/vectara/langchain_vectara/: __init__.py  tools.py  vectorstores.py
libs/vectara/tests/integration_tests/: test_tools.py  test_vectorstores.py
libs/vectara/tests/unit_tests/: test_imports.py  test_tools.py  test_vectorstores.py
