[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = []
license = { text = "MIT" }
requires-python = "<3.14,>=3.9"
dependencies = [
    "langchain-core<1.0.0,>=0.3.34",
    "langchain-tests<1.0.0,>=0.3.7",
]
name = "langchain-vectara"
version = "0.1.0rc1"
description = "An integration package connecting Vectara and LangChain"
readme = "README.md"

[project.urls]
repository = "https://github.com/vectara/langchain-vectara"

[dependency-groups]
test = [
    "pytest<9,>=8",
    "freezegun<2.0.0,>=1.2.2",
    "pytest-mock<4.0.0,>=3.10.0",
    "syrupy<5.0.0,>=4.0.2",
    "pytest-watcher<1.0.0,>=0.3.4",
    "pytest-asyncio<1,>=0.25.0",
    "pytest-socket<1.0.0,>=0.7.0",
    "pytest-dotenv<0.5.0,>=0.4.0",
    "python-dotenv<1.0.0,>=0.21.0"
]
codespell = ["codespell<3.0.0,>=2.2.0"]
test_integration = ["langchain-openai<0.4,>=0.3.6"]
lint = ["ruff<1.0,>=0.5"]
dev = ["langchain-core"]
typing = ["mypy<2.0,>=1.10", "simsimd<6.0.0,>=5.0.0", "types-requests>=2.31.0.2"]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

env_files = ".env"